# SLIC-Superpixels

./: CMakeLists.txt  slic.cpp  slic.h  test_slic.cpp
cmake/: FindSLIC.cmake  FindSLIC.cmake~
